force-app/main/default/objects/Bookstore__c/Bookstore__c.object-meta.xml
<CustomObject>
    <label>Bookstore</label>
    <nameField>
        <label>Bookstore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookstores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>