force-app/main/default/objects/Bookstore__c/fields/Closing_Hour__c.field-meta.xml
<CustomField>
    <fullName>Closing_Hour__c</fullName>
    <label>Closing Hour</label>
    <type>Time</type>
</CustomField>