force-app/main/default/objects/Bookstore__c/fields/Opening_Hour__c.field-meta.xml
<CustomField>
    <fullName>Opening_Hour__c</fullName>
    <label>Opening Hour</label>
    <type>Time</type>
</CustomField>