force-app/main/default/objects/Bookstore__c/fields/Related_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Id__c</fullName>
    <formula>Manager__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related User Id</label>
    <type>Text</type>
</CustomField>