force-app/main/default/objects/Bookstore__c/fields/Store_Identification_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Identification_Code__c</fullName>
    <label>Store Identification Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>