force-app/main/default/objects/Bookstore__c/fields/Store_Identification_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Store_Identification_Code_Formula__c</fullName>
    <formula>Store_Identification_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Identification Code</label>
    <type>Text</type>
</CustomField>