force-app/main/default/objects/Bookstore__c/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Type</label>
    <type>Text</type>
</CustomField>