force-app/main/default/objects/Bookstore__c/fields/Total_Number_Of_Books__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Books__c</fullName>
    <description>Number of different book titles in the book store</description>
    <label>Total Number Of Books</label>
    <summaryForeignKey>Bookstore_Book__c.Bookstore__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>