force-app/main/default/objects/Bookstore__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <formula>TEXT( Opening_Hour__c ) &amp; &quot; - &quot; &amp; TEXT(  Closing_Hour__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Hours</label>
    <type>Text</type>
</CustomField>