force-app/main/default/objects/Bookstore__c/validationRules/Bookstore_Type_Uneditable.validationRule-meta.xml
<ValidationRule>
    <fullName>Bookstore_Type_Uneditable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( RecordTypeId )</errorConditionFormula>
    <errorMessage>Record type of bookstore cannot be changed</errorMessage>
</ValidationRule>