force-app/main/default/objects/Bookstore__c/validationRules/BookstoreManagerCanEditOwnBookstores.validationRule-meta.xml
<ValidationRule>
    <fullName>BookstoreManagerCanEditOwnBookstores</fullName>
    <active>true</active>
    <description>This validation rule stops bookstore manager from editing booksters other then their own</description>
    <errorConditionFormula>AND(ISBLANK(CreatedById) = false ,  Manager__r.Id !=  $User.Id,  $User.isBookstoreManager__c = true )</errorConditionFormula>
    <errorMessage>You can&apos;t edit bookstores you do not work for!</errorMessage>
</ValidationRule>