force-app/main/default/objects/Bookstore__c/listViews/Recently_Added_Bookstores.listView-meta.xml
<ListView>
    <fullName>Recently_Added_Bookstores</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recently Added Bookstores</label>
</ListView>